--- a/app/views/changeauthor/index.html.erb
+++ b/app/views/changeauthor/index.html.erb
@@ -2,21 +2,19 @@
 
 <p><%=l(:label_authorchange) %>
 	<em>
-		<%=@issue_user["firstname"].to_s+" "+@issue_user["lastname"].to_s%>
+		<%= @issue_user["firstname"] %> <%= @issue_user["lastname"] %>
 	</em>
 </p>
-<% form_for :changeauthor, @issue, :url => { :action => "edit" } do |f| %> 
+<%= form_tag({ :controller => :changeauthor, :action => "edit" }) do %> 
 <p>
 	<h3><%=l(:head_authorchange) %></h3>
 	
 	<%= hidden_field_tag "issue_id", +@issue["id"] %>
 	
 	<select id="edit-authorid" name="authorid">
-    <%=options_from_collection_for_select(@users, :user_id, :name, @issue["author_id"]) %>
+    <%= options_from_collection_for_select(@users, :user_id, :name, @issue["author_id"]) %>
 	</select>
 </p>
-
 <%= submit_tag(l(:button_save), :class => 'button-small')-%>
-
 <% end %>
 
