Implemented the journal update (Fixes #11377), and fixed a lot of display quirks

--- a/app/views/changeauthor/index.html.erb
+++ b/app/views/changeauthor/index.html.erb
@@ -2,7 +2,7 @@
 
 <p><%=l(:label_authorchange) %>
 	<em>
-		<%= @issue_user["firstname"] %> <%= @issue_user["lastname"] %>
+		<%= @issue_user.name %>
 	</em>
 </p>
 <%= form_tag({ :controller => :changeauthor, :action => "edit" }) do %> 
