--- a/app/views/settings/_redmine_changeauthor_settings.html.erb
+++ b/app/views/settings/_redmine_changeauthor_settings.html.erb
@@ -2,8 +2,8 @@
   <%= label_tag "redmine_changeauthor_log_setting", l(:label_authorchange_setlog) %>
   <%=
     select_tag 'settings[redmine_changeauthor_log_setting]', options_for_select([
-      ['no', 'no'],
-      ['yes', 'yes'],
+      [l(:general_text_No), 'no'],
+      [l(:general_text_Yes), 'yes'],
     ], @settings['redmine_changeauthor_log_setting'])  %>
    <%=l(:label_authorchange_setlog_description) %>
 </p>
