--- a/app/views/changeauthor/index.html.erb
+++ b/app/views/changeauthor/index.html.erb
@@ -9,7 +9,7 @@
 <p>
 	<h3><%=l(:head_authorchange) %></h3>
 	
-	<%= hidden_field_tag "issue_id", +@issue["id"] %>
+	<%= hidden_field_tag "id", +@issue["id"] %>
 	
 	<select id="edit-authorid" name="authorid">
     		<%= options_from_collection_for_select(@users, :user_id, :name, @issue["author_id"]) %>
