--- a/app/views/issues/_changeauthor.html.erb
+++ b/app/views/issues/_changeauthor.html.erb
@@ -3,7 +3,7 @@
   <%= javascript_tag do -%>
     if ($('#content > .contextual .redmine-authorchange-button').length == 0) {
       $('#content > .contextual').prepend(
-        '<%= link_to l(:button_authorchange), {:controller => 'changeauthor', :action => 'index', :issue_id => @issue }, :class => 'icon icon-close redmine-authorchange-button' %>'
+        '<%= link_to l(:button_authorchange), {:controller => 'changeauthor', :action => 'index', :id => @issue }, :class => 'icon icon-close redmine-authorchange-button' %>'
       )
     }
   <% end -%>
