Changes routes from index, edit to edit, update

--- a/app/views/settings/_redmine_changeauthor_settings.html.erb
+++ b/app/views/settings/_redmine_changeauthor_settings.html.erb
@@ -1,5 +1,5 @@
 <p>
-  <%= label_tag "redmine_changeauthor_log_setting", l(:label_authorchange_setlog) %>
+  <%= label_tag 'redmine_changeauthor_log_setting', l(:label_authorchange_setlog) %>
   <%=
     select_tag 'settings[redmine_changeauthor_log_setting]', options_for_select([
       [l(:general_text_No), 'no'],
