--- a/app/views/issues/_changeauthor.html.erb
+++ b/app/views/issues/_changeauthor.html.erb
@@ -1,9 +1,9 @@
 <% if User.current.allowed_to?(:change_author, @project) %>
-<%= stylesheet_link_tag("redmine_changeauthor.css", :plugin => 'redmine_changeauthor') %>
+  <%= stylesheet_link_tag('redmine_changeauthor.css', :plugin => 'redmine_changeauthor') %>
   <%= javascript_tag do -%>
     if ($('#content > .contextual .redmine-authorchange-button').length == 0) {
       $('#content > .contextual').prepend(
-        '<%= link_to l(:button_authorchange), {:controller => 'changeauthor', :action => 'index', :id => @issue }, :class => 'icon icon-close redmine-authorchange-button' %>'
+        '<%= link_to l(:button_authorchange), edit_changeauthor_path(@issue), :class => 'icon icon-close redmine-authorchange-button' %>'
       )
     }
   <% end -%>
