Fix compatibility with redmine HEAD

--- a/app/views/issues/_changeauthor.html.erb
+++ b/app/views/issues/_changeauthor.html.erb
@@ -3,7 +3,7 @@
   <%= javascript_tag do -%>
     if ($('#content > .contextual .redmine-authorchange-button').length == 0) {
       $('#content > .contextual').append(
-        '<%= link_to l(:button_authorchange), edit_changeauthor_path(@issue), :class => 'icon icon-close redmine-authorchange-button' %>'
+        '<%= link_to l(:button_authorchange), edit_changeauthor_path(@issue), :class => 'icon redmine-authorchange-button' %>'
       )
     }
   <% end -%>
