--- a/app/views/changeauthor/edit.html.erb
+++ b/app/views/changeauthor/edit.html.erb
@@ -20,4 +20,4 @@
 <% html_title "#{@issue.tracker.name} ##{@issue.id}: #{@issue.subject}" %>
 
 
-<%= context_menu issues_context_menu_path %>
+<%= context_menu %>
